Buy button on content spaces

--- a/content/pages/tickets.mdx
+++ b/content/pages/tickets.mdx
@@ -4,6 +4,7 @@ blocks:
   - tagline: Get your tickets now before the increase in price!
     headline: Get ready for 2024!
     text: ''
+    text2: ''
     backgroundimage: /uploads/background1.png
     color: primary
     _template: hero
@@ -14,11 +15,36 @@ blocks:
           
           ## Access all with the best value pass
           
-          * ✔ Learn Sat & Sun
-          * ✔ Dine Saturday
-          * ✔ Dance Fri, Sat, Sun
+          ✔ Learn Sat & Sun\
+          ✔ Dine Saturday\
+          ✔ Dance Fri, Sat, Sun
         </>}
+        buttonid="buy_btn_1PX2eZEWkmdeWsQPvSMRezVD"
       />
+    width: large
+    _template: content
+  - tagline: Extra discount for confirmed students
+    headline: Student Discount
+    text: ''
+    text2: ''
+    backgroundimage: /uploads/background1.png
+    color: primary
+    _template: hero
+  - body: |
+      <BuyButton
+        description={<>
+          # Get the best value!
+          
+          ## Access all with the best value pass
+          
+          ✔ Learn Sat & Sun\
+          ✔ Dine Saturday\
+          ✔ Dance Fri, Sat, Sun
+        </>}
+        buttonid="buy_btn_1PX2eZEWkmdeWsQPvSMRezVD"
+      />
+    width: large
+    color: default
     _template: content
 ---
 
