Reformatted pricing page using block component

--- a/content/pages/pricing.mdx
+++ b/content/pages/pricing.mdx
@@ -1,12 +1,15 @@
 ---
 title: Prices
 blocks:
-  - tagline: Here's some text above the other text
-    headline: This Big Text is Totally Awesome
-    text: |
-      test
+  - tagline: Get the best pass for you
+    headline: Pass Selector
+    text: >
+      Simply click everything you want and we'll select the best pass option for
+      your needs. Please note sometimes you'll get extras as the early bird is
+      that good fo a deal but these cannot be transfered to others.
+    text2: ''
     backgroundimage: /uploads/background1.png
-    color: default
-    _template: hero
+    color: primary
+    _template: pricing
 ---
 
