--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -17,7 +17,7 @@ blocks:
         link: /tickets
     image:
       src: /uploads/mlflogo.png
-      alt: ''
+      alt: MLF Logo
     backgroundimage: /uploads/background1.png
     color: primary
     _template: hero
