--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -3,12 +3,12 @@ title: Merseyside Latin Festival Homepage
 blocks:
   - tagline: Northwest's Biggest & Best SRBK Event
     headline: Merseyside Latin Festival 2024
-    text: >
+    text: |
       ## Early Bird Tickets
 
+      Hurry, get them now before the prices go up! 
 
-      Get them now before the prices go up for the only thing you should be
-      doing 29th November - 1st December 2024
+      It's the only thing you should be doing 29th Nov- 1st Dec 2024
     text2: ''
     actions:
       - label: Get your tickets
@@ -76,6 +76,30 @@ blocks:
           filler text.
     color: transparent
     _template: features
+  - tagline: Iconic Venue
+    headline: The Adelphi Liverpool
+    text: >
+      The festival will be hosted right in the heart of Liverpool
+
+
+      The Adelphi, an icon of the city, is guaranteed to make your event
+      memorable. It has grand spaces for classes and dancing plus great rooms at
+      reasonable prices.
+
+
+      Dont forget we have specials deals for our festival attendees
+    text2: ''
+    actions:
+      - label: Book now!
+        type: button
+        icon: true
+        link: /accomodation
+    image:
+      src: /uploads/adelphi-welcome.jpg
+      alt: ' '
+    backgroundimage: /uploads/adelphi.jpg
+    color: primary
+    _template: hero
   - tagline: Last year
     headline: Last year's video
     text: >
