Adding better tickets pictures

--- a/content/pages/tickets.mdx
+++ b/content/pages/tickets.mdx
@@ -3,9 +3,22 @@ title: Tickets
 blocks:
   - tagline: Get your tickets now before the increase in price!
     headline: Get ready for 2024!
-    text: ''
+    text: >
+      Packages deals are coming soon but until then we have the best deal, Full
+      pass for only £125!
+
+
+      This wont be beaten and offers a chance to come to all 3 days, including
+      two days of classes, three late night parties and a fantastic meal as
+      well.
+
+
+      Plus we have a stduent deal saving those with valid ID and extra £15!
+
+
+      Don't delay get the best deal whilst it's available!
     text2: ''
-    backgroundimage: /uploads/background1.png
+    backgroundimage: /uploads/402241552_258837160502601_4717378653767616989_n.jpg
     color: primary
     _template: hero
   - body: |
@@ -27,7 +40,7 @@ blocks:
     headline: Student Discount
     text: ''
     text2: ''
-    backgroundimage: /uploads/background1.png
+    backgroundimage: /uploads/402470040_259971930389124_1356747040294709062_n.jpg
     color: primary
     _template: hero
   - body: |
