Better messages and lowercase filenames

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -28,25 +28,19 @@ blocks:
           color: teal
           style: circle
         title: Incredible Classes
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text. test
+        details: ''
       - icon:
           name: BiSolidBowlHot
           color: green
           style: circle
         title: Delicious Food
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
+        details: ''
       - icon:
           name: BiSolidHappyHeartEyes
           color: red
           style: circle
         title: Great Dancing
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
+        details: ''
     color: transparent
     _template: features
   - items:
@@ -55,25 +49,19 @@ blocks:
           color: pink
           style: circle
         title: Amazing Artists
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
+        details: ''
       - icon:
           name: BiSolidSchool
           color: yellow
           style: circle
         title: Great Venue
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
+        details: ''
       - icon:
           name: BiSolidBuildings
           color: purple
           style: circle
         title: Onsite accomodation
-        text: >-
-          This is where you might talk about the feature, if this wasn't just
-          filler text.
+        details: ''
     color: transparent
     _template: features
   - tagline: Iconic Venue
