Content and Styling and Admin info

--- a/content/pages/accomodation.mdx
+++ b/content/pages/accomodation.mdx
@@ -14,6 +14,7 @@ blocks:
     text2: ''
     image:
       src: /uploads/0_Liverpool-Britannia-Adelphi.jpg
+      alt: Adelphi at night
     backgroundimage: /uploads/adelphi-welcome.jpg
     color: primary
     _template: hero
