--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -6,7 +6,7 @@ blocks:
     text: |
       ## Early Bird Tickets
 
-      Hurry, get them now before the prices go up! 
+      Hurry, get them now before the prices go up!
 
       It's the only thing you should be doing 29th Nov- 1st Dec 2024
     text2: ''
@@ -28,19 +28,25 @@ blocks:
           color: teal
           style: circle
         title: Incredible Classes
-        details: ''
+        details: >
+          With teachers coming from all over the world your style and interest
+          will definately be covered
       - icon:
           name: BiSolidBowlHot
           color: green
           style: circle
         title: Delicious Food
-        details: ''
+        details: >
+          No more quick sandwich before the party, our dinner option from the
+          venue will be a classy break from the norm
       - icon:
           name: BiSolidHappyHeartEyes
           color: red
           style: circle
         title: Great Dancing
-        details: ''
+        details: >
+          People will be coming from all over so you're able to find new faces
+          to add to old favourites
     color: transparent
     _template: features
   - items:
@@ -49,19 +55,25 @@ blocks:
           color: pink
           style: circle
         title: Amazing Artists
-        details: ''
+        details: >
+          The line-up is being finalized but we have some incredible teachers
+          from all over the world booked
       - icon:
           name: BiSolidSchool
           color: yellow
           style: circle
         title: Great Venue
-        details: ''
+        details: >
+          Hosted by an incredible venue with great spaces, no dancing in cramped
+          rooms at this event
       - icon:
           name: BiSolidBuildings
           color: purple
           style: circle
         title: Onsite accomodation
-        details: ''
+        details: >
+          We've also teamed up with the venue to offer super value rooms in this
+          city centre venue
     color: transparent
     _template: features
   - tagline: Iconic Venue
@@ -84,24 +96,25 @@ blocks:
         link: /accomodation
     image:
       src: /uploads/adelphi-welcome.jpg
-      alt: ' '
+      alt: ' Adelphi Reception'
     backgroundimage: /uploads/adelphi.jpg
     color: primary
     _template: hero
-  - tagline: Last year
-    headline: Last year's video
-    text: >
-      See last years highlights and get ready to experience it at 300% with 3
-      days!
+  - tagline: Photos
+    headline: See last year's event
+    text: |
+      Browse the highlights and get ready to experience it at 300% with 3 days!
     text2: ''
     actions:
-      - label: Watch last years video
+      - label: See the albums
         type: button
         icon: true
-        link: /
+        link: >-
+          https://www.facebook.com/profile.php?id=100091289556414&sk=photos_albums
     image:
       src: /uploads/mlflogo.png
-    backgroundimage: /uploads/backgroundMovie.mp4
+      alt: ' '
+    backgroundimage: /uploads/video/dancing-mlf.mp4
     color: primary
     _template: hero
   - quote: >-
