--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,6 +1,12 @@
 ---
 title: Merseyside Latin Festival Homepage
 blocks:
+  - body: |
+      Debug
+
+      [Ticket Page](/preferences)
+    width: large
+    _template: content
   - tagline: Northwest's Biggest & Best SRBK Event
     headline: Merseyside Latin Festival 2024
     text: |
