New preferences pages and functions

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -4,7 +4,7 @@ blocks:
   - body: |
       Debug
 
-      [Ticket Page](/preferences)
+      [Preferences ](/preferences "Preferences")
     width: large
     _template: content
   - tagline: Northwest's Biggest & Best SRBK Event
