New pricing table and content

--- a/content/pages/pricing.mdx
+++ b/content/pages/pricing.mdx
@@ -6,7 +6,7 @@ blocks:
     text: >
       Simply click everything you want and we'll select the best pass option for
       your needs. Please note sometimes you'll get extras as the early bird is
-      that good fo a deal but these cannot be transfered to others.
+      that good of a deal but these cannot be transfered to others.
     text2: ''
     backgroundimage: /uploads/background1.png
     color: primary
