--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -16,7 +16,7 @@ blocks:
         icon: true
         link: /tickets
     image:
-      src: /uploads/mlflogo.png
+      src: /uploads/mlf-colour-full-2.svg
       alt: MLF Logo
     backgroundimage: /uploads/background1.png
     color: primary
@@ -100,6 +100,12 @@ blocks:
     backgroundimage: /uploads/adelphi.jpg
     color: primary
     _template: hero
+  - quote: >-
+      Last year was incredible and I am so excited for 3 days. Bring it on!
+      #MLF2024
+    author: Adam Bardsley
+    color: primary
+    _template: testimonial
   - tagline: Photos
     headline: See last year's event
     text: |
@@ -112,16 +118,10 @@ blocks:
         link: >-
           https://www.facebook.com/profile.php?id=100091289556414&sk=photos_albums
     image:
-      src: /uploads/mlflogo.png
+      src: /uploads/mlf-white-full-2.svg
       alt: ' '
     backgroundimage: /uploads/video/dancing-mlf.mp4
     color: primary
     _template: hero
-  - quote: >-
-      Last year was incredible and I am so excited for 3 days. Bring it on!
-      #MLF2024
-    author: Adam Bardsley
-    color: primary
-    _template: testimonial
 ---
 
