Removing cart icon for now

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -1,5 +1,5 @@
 ---
-title: Merseyside Latin Festival Homepage
+title: Homepage
 blocks:
   - tagline: Northwest's Biggest & Best SRBK Event
     headline: Merseyside Latin Festival 2024
