Content in prep for 2.1.0 upgrade.

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -47,7 +47,7 @@ blocks:
         details: >
           People will be coming from all over so you're able to find new faces
           to add to old favourites
-    color: transparent
+    color: tint
     _template: features
   - items:
       - icon:
@@ -102,7 +102,7 @@ blocks:
     _template: hero
   - tagline: Your Hosts
     headline: The Salsa Liverpool Team
-    text: "Behind Liverpool's biggest Latin events, such as\_LIVERPOOL SALSA FESTIVAL, SALSA UNDER THE PALMS, HILTION MEGA FIESTA\_&\_MLF Winter Ball 2023... We are now bringing to you a 3 day dance event filled with all our favourites: Salsa, Rueda, Bachata, Kizomba and more!\n\nFull of\_GLITZ & GLAM, this pre Christmas Charity event features 3 days of parties (Fri, Sat, Sun), 4 rooms of dancing and the option of a 3 course sit down Gala Dinner (Saturday 30th November) and a full day of 100% CUBAN (Sunday 1st December). Did we mention that there is also the option of 2 days filled with dance boosting classes too?\nWell there is...\n\n\uFEFFCome and join us!\n\n\n"
+    text: "Behind Liverpool's biggest Latin events, such as\_LIVERPOOL SALSA FESTIVAL, SALSA UNDER THE PALMS, HILTION MEGA FIESTA\_&\_MLF Winter Ball 2023... We are now bringing to you a 3 day dance event filled with all our favourites: Salsa, Rueda, Bachata, Kizomba and more!\n\nFull of\_GLITZ & GLAM, this pre Christmas Charity event features 3 days of parties (Fri, Sat, Sun), 4 rooms of dancing and the option of a 3 course sit down Gala Dinner (Saturday 30th November) and a full day of 100% CUBAN (Sunday 1st December). Did we mention that there is also the option of 2 days filled with dance boosting classes too?\nWell there is...\n\n\uFEFFCome and join us!\n"
     text2: |
       Karen & Gill
     image:
