--- a/content/pages/accomodation.mdx
+++ b/content/pages/accomodation.mdx
@@ -47,6 +47,13 @@ blocks:
           <DiscountCode code="MLF3" />
     color: transparent
     _template: features
+  - body: >
+      These prices are based on two people sharing - £50 to reserve a room with
+      the balance payable on arrival
+    width: small
+    color: primary
+    padding: small
+    textsize: sm
+    _template: content
 ---
-
 
