--- a/content/pages/meal.mdx
+++ b/content/pages/meal.mdx
@@ -1,27 +1,33 @@
 ---
 title: Meal
 blocks:
-  - tagline: Here's some text above the other text
-    headline: Meal Information
+  - tagline: Meal Information
+    headline: Gala Dinner
     text: >
-      Here we can introduce the meal generally with a little bit of info. 
+      Enjoy a delightful three-course Gala Dinner with your friends from the
+      dance community.
 
 
-      This should be enough space but we should add a photo of the food on the
-      right
+      Start with a tasty appetizer, followed by a main course with various
+      flavorful dishes, including a vegan option. End the meal with a sweet
+      dessert. There are limited places available, so make sure to book by
+      midnight on 14th November.
+
+
+      This dinner adds a nice touch to the evening's festivities and offers a
+      relaxed dining experience.
     text2: |
-      If you need to change your meal choices you can up until....
+      Preferences can be submitted until midnight 14th November
     actions:
       - label: Update Meal Choices
         type: button
         icon: true
         link: /preferences
     image:
-      src: /uploads/Square-FS.jpg
+      src: /uploads/britannia-adelphi-hotel.jpg
       alt: ' '
-    backgroundimage: /uploads/restaurant-adelphi-2019-660x340.jpg
+    backgroundimage: /uploads/0_Liverpool-Britannia-Adelphi.jpg
     color: primary
     _template: hero
 ---
-
 
