--- a/content/pages/meal.mdx
+++ b/content/pages/meal.mdx
@@ -16,17 +16,57 @@ blocks:
 
       This dinner adds a nice touch to the evening's festivities and offers a
       relaxed dining experience.
-    text2: |
-      Preferences can be submitted until midnight 14th November
-    actions:
-      - label: Update Meal Choices
-        type: button
-        icon: true
-        link: /preferences
+    text2: ''
     image:
       src: /uploads/britannia-adelphi-hotel.jpg
       alt: ' '
     backgroundimage: /uploads/0_Liverpool-Britannia-Adelphi.jpg
+    color: primary
+    _template: hero
+  - title: The Menu
+    items:
+      - icon:
+          name: BiBaguette
+          color: ''
+          style: circle
+        title: Starter
+        details: |
+          * Chicken Liver Pate served with Warm Bread & Chutney
+          * Vegetable Terrine (Vegan)
+      - icon:
+          name: BiSolidBowlRice
+          color: ''
+          style: circle
+        title: Main
+        details: |
+          * Chicken Supreme with Mash & Gravy
+          * Risotto with Fish & Prawn
+          * Roasted Whole Onion stuffed with Polenta (Vegan)
+
+          All served with seasonal vegetables and potatoes
+      - icon:
+          name: BiSolidCake
+          color: merseyside
+          style: circle
+        title: Desert
+        details: |
+          * Chefs Brioche, Bread & Butter Pudding (Vegetarian option available)
+          * Fruit Platter (Vegan)
+    color: transparent
+    _template: features
+  - tagline: Online Meal Preferences
+    headline: ''
+    text: >
+      You can update your meal preferences using the email you provided and the
+      ticket numebr emailed to you
+
+
+      The deadline for meal preferences is midnight on 2nd November
+    actions:
+      - label: Submit Meal Choices
+        type: button
+        icon: true
+        link: /preferences
     color: primary
     _template: hero
 ---
