prose style on feature blocks and small accomodation typo

--- a/content/pages/accomodation.mdx
+++ b/content/pages/accomodation.mdx
@@ -10,7 +10,7 @@ blocks:
 
       We've worked with this beautiful venue to get you some great deals and it
       couldn't be closer to both the event and the city centre. It's literally
-      perfect situated!
+      perfectly situated!
     text2: ''
     image:
       src: /uploads/0_Liverpool-Britannia-Adelphi.jpg
