Move social templates

--- a/content/pages/brand.mdx
+++ b/content/pages/brand.mdx
@@ -23,7 +23,7 @@ blocks:
           style: float
         title: With Background
         details: |
-          ![Template](/socials/Logo/1.webp)
+          ![Template](/brand/socials/Logo/1.webp)
 
           * [Download WebP](/socials/Logo/1.webp)
           * [Download PNG](/socials/Logo/1.png)
