--- a/content/pages/brand.mdx
+++ b/content/pages/brand.mdx
@@ -23,32 +23,32 @@ blocks:
           style: float
         title: With Background
         details: |
-          ![Template](/brand/socials/Logo/1.webp)
+          ![Template](/uploads/brand/socials/Logo/1.webp)
 
-          * [Download WebP](/socials/Logo/1.webp)
-          * [Download PNG](/socials/Logo/1.png)
+          * [Download WebP](/uploads/brand/socials/Logo/1.webp)
+          * [Download PNG](/uploads/brand/socials/Logo/1.png)
       - icon:
           name: ''
           color: ''
           style: float
         title: See through Colour
         details: |
-          ![Template](/socials/Logo/2.webp)
+          ![Template](/uploads/brand/socials/Logo/2.webp)
 
-          * [Download WebP](/socials/Logo/2.webp)
-          * [Download PNG](/socials/Logo/2.png)
+          * [Download WebP](/uploads/brand/socials/Logo/2.webp)
+          * [Download PNG](/uploads/brand/socials/Logo/2.png)
       - icon:
           name: ''
           color: ''
           style: float
         title: See through Mono
         details: |
-          ![Template](/socials/Logo/3.webp)
+          ![Template](/uploads/brand/socials/Logo/3.webp)
 
-          * [Download WebP White](/socials/Logo/3.webp)
-          * [Download WebP Black](/socials/Logo/4.webp)
-          * [Download PNG White](/socials/Logo/3.png)
-          * [Download PNG Black](/socials/Logo/4.png)
+          * [Download WebP White](/uploads/brand/socials/Logo/3.webp)
+          * [Download WebP Black](/uploads/brand/socials/Logo/4.webp)
+          * [Download PNG White](/uploads/brand/socials/Logo/3.png)
+          * [Download PNG Black](/uploads/brand/socials/Logo/4.png)
     _template: features
   - title: Templates
     items:
@@ -58,42 +58,42 @@ blocks:
           style: float
         title: Insta Full Colour
         details: |
-          ![Template](/socials/Instagram/1.webp)
+          ![Template](/uploads/brand/socials/Instagram/1.webp)
 
-          * [Download WebP](/socials/Instagram/1.webp)
-          * [Download PNG](/socials/Instagram/1.png)
+          * [Download WebP](/uploads/brand/socials/Instagram/1.webp)
+          * [Download PNG](/uploads/brand/socials/Instagram/1.png)
 
           ## Examples
 
-          ![Template](/socials/Instagram/4.webp)
+          ![Template](/uploads/brand/socials/Instagram/4.webp)
       - icon:
           name: BiLogoInstagramAlt
           color: pink
           style: float
         title: Instagram White
         details: |
-          ![Template](/socials/Instagram/2.webp)
+          ![Template](/uploads/brand/socials/Instagram/2.webp)
 
-          * [Download WebP](/socials/Instagram/2.webp)
-          * [Download PNG](/socials/Instagram/2.png)
+          * [Download WebP](/uploads/brand/socials/Instagram/2.webp)
+          * [Download PNG](/uploads/brand/socials/Instagram/2.png)
 
           ## Examples
 
-          ![Template](/socials/Instagram/5.webp)
+          ![Template](/uploads/brand/socials/Instagram/5.webp)
       - icon:
           name: BiLogoInstagramAlt
           color: pink
           style: float
         title: Instagram Bar
         details: |
-          ![Template](/socials/Instagram/3.webp)
+          ![Template](/uploads/brand/socials/Instagram/3.webp)
 
-          * [Download WebP](/socials/Instagram/3.webp)
-          * [Download PNG](/socials/Instagram/3.png)
+          * [Download WebP](/uploads/brand/socials/Instagram/3.webp)
+          * [Download PNG](/uploads/brand/socials/Instagram/3.png)
 
           ## Example
 
-          ![Template](/socials/Instagram/6.webp)
+          ![Template](/uploads/brand/socials/Instagram/6.webp)
     color: default
     _template: features
   - title: ''
@@ -104,40 +104,40 @@ blocks:
           style: float
         title: Facebook Cover
         details: |
-          ![Template](/socials/Facebook%20Cover/1.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Cover/1.webp)
 
-          * [Download WebP](/socials/Facebook%20Cover/1.webp)
-          * [Download PNG](/socials/Facebook%20Cover/1.png)
+          * [Download WebP](/uploads/brand/socials/Facebook%20Cover/1.webp)
+          * [Download PNG](/uploads/brand/socials/Facebook%20Cover/1.png)
 
           ## Examples
 
-          ![Template](/socials/Facebook%20Cover/2.webp)
-          ![Template](/socials/Facebook%20Cover/3.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Cover/2.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Cover/3.webp)
       - icon:
           name: BiLogoFacebookCircle
           color: blue
           style: float
         title: Facebook Post
         details: |
-          ![Template](/socials/Facebook%20Post/1.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Post/1.webp)
 
-          * [Download WebP](/socials/Facebook%20Post/1.webp)
-          * [Download PNG](/socials/Facebook%20Post/1.png)
+          * [Download WebP](/uploads/brand/socials/Facebook%20Post/1.webp)
+          * [Download PNG](/uploads/brand/socials/Facebook%20Post/1.png)
 
           ## Examples
 
-          ![Template](/socials/Facebook%20Post/2.webp)
-          ![Template](/socials/Facebook%20Post/3.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Post/2.webp)
+          ![Template](/uploads/brand/socials/Facebook%20Post/3.webp)
       - icon:
           name: BiLogoInstagramAlt
           color: pink
           style: float
         title: Instagram Portrait
         details: |
-          ![Template](/socials/Instagram/Insta%20Story%20Portrait.webp)
+          ![Template](/uploads/brand/socials/Instagram/Insta%20Story%20Portrait.webp)
 
-          * [Download WebP](/socials/Instagram/Insta%20Story%20Portrait.webp)
-          * [Download PNG](/socials/Instagram/Insta%20Story%20Portrait.png)
+          * [Download WebP](/uploads/brand/socials/Instagram/Insta%20Story%20Portrait.webp)
+          * [Download PNG](/uploads/brand/socials/Instagram/Insta%20Story%20Portrait.png)
     color: default
     _template: features
 ---
