Update home.mdx link to ticket page

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -16,7 +16,7 @@ blocks:
       - label: Get your tickets
         type: button
         icon: true
-        link: /pricing
+        link: /tickets
     image:
       src: /uploads/mlf-colour-full-2.svg
       alt: MLF Logo
