--- a/content/classes/Bachata-Role-Rotation.mdx
+++ b/content/classes/Bachata-Role-Rotation.mdx
@@ -4,5 +4,6 @@ details: ''
 artist: content/artists/chandi-and-eniko.mdx
 date: 2024-11-30T14:00:00.000Z
 location: derby
+level: intermediate
 ---
 
