--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -5,8 +5,6 @@ blocks:
     headline: Newcastle Salsa Congress
     text: |
       <CountdownElement date="2026-01-09T19:00:00.000Z" />
-
-      It's the only thing you should be doing 29th Nov- 1st Dec 2024
     text2: ''
     actions:
       - label: Get your tickets
@@ -14,67 +12,10 @@ blocks:
         icon: true
         link: /tickets
     image:
-      src: /uploads/mlf-colour-full-2.svg
+      src: /uploads/NCL_Logo.jpg
       alt: MLF Logo
-    backgroundimage: /uploads/background1.jpg
+    backgroundimage: /uploads/newcastle-dancing.jpg
     color: primary
     _template: hero
-  - title: What to expect
-    items:
-      - icon:
-          name: BiSolidBookHeart
-          color: teal
-          style: circle
-        title: Incredible Classes
-        details: >
-          With teachers coming from all over the world your style and interest
-          will definitely be covered.
-      - icon:
-          name: BiSolidBowlHot
-          color: green
-          style: circle
-        title: Delicious Food
-        details: >
-          \*\*\* Bookings Closed  \*\*\*\
-
-          No more quick sandwich before the party, our dinner option from the
-          venue will be a classy break from the norm.
-      - icon:
-          name: BiSolidHappyHeartEyes
-          color: red
-          style: circle
-        title: Great Dancing
-        details: >
-          People will be coming from all over so you're able to find new faces
-          to add to old favourites.
-    color: transparent
-    _template: features
-  - items:
-      - icon:
-          name: BiMaleFemale
-          color: pink
-          style: circle
-        title: Amazing Artists
-        details: >
-          The line-up is being finalized but we have some incredible teachers
-          from all over the world booked already!
-      - icon:
-          name: BiSolidSchool
-          color: yellow
-          style: circle
-        title: Great Venue
-        details: >
-          Hosted by an incredible venue with great spaces, no dancing in cramped
-          rooms or on sub-par flooring.
-      - icon:
-          name: BiSolidBuildings
-          color: purple
-          style: circle
-        title: Onsite accomodation
-        details: >
-          We've also teamed up with the venue to offer super value rooms in this
-          city centre venue.
-    color: transparent
-    _template: features
 ---
 
