--- a/content/pages/tickets.mdx
+++ b/content/pages/tickets.mdx
@@ -3,13 +3,10 @@ title: Tickets
 blocks:
   - tagline: Get the best pass for you
     headline: Pass Selector
-    text: >
-      Simply click everything you want and we'll select the best pass option for
-      your needs. Please note sometimes you'll get extras as our full pass is
-      that good of a deal but these cannot be transferred to others. The sale of
-      Gala Dinner tickets has now closed.
+    text: |
+      This is a demo Site please don't try and buy tickets
     text2: ''
-    backgroundimage: /uploads/background1.png
+    backgroundimage: /uploads/NSC11-Group.jpg
     color: primary
     _template: pricing
 ---
