--- a/content/artists/2024/amine-urbankiz-and-ama-cee.mdx
+++ b/content/artists/2024/amine-urbankiz-and-ama-cee.mdx
@@ -3,4 +3,4 @@ name: Amine UrbanKiz and Ama C'ee
 avatar: /uploads/Artists/18.jpg
 ---
 
-After such successful classes Amine will be joining us again this year to teach urban KIZOMBA with the unforgettable Ama C’ee
+After such successful classes Amine will be joining us again this year to teach urban KIZOMBA with the unforgettable Ama C’ee.
