Removing classes from artists

--- a/content/artists/2024/carl-and-ellena.mdx
+++ b/content/artists/2024/carl-and-ellena.mdx
@@ -1,6 +1,6 @@
 ---
 name: Carl and Ellena
-avatar: /uploads/Carl&Ellena.png
+avatar: ''
 socials:
   - handle: '@ellenamcconville'
     url: 'https://www.instagram.com/ellenamcconville'
