--- a/content/classes/2024/Bachata-Basics.mdx
+++ b/content/classes/2024/Bachata-Basics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata Basics
 details: ''
-artist: content/artists/jp.mdx
+artist: 
 date: 2024-11-30T10:00:00.000Z
 location: derby
 level: beginner
