--- a/content/classes/2024/Bachata-Role-Rotation-2.mdx
+++ b/content/classes/2024/Bachata-Role-Rotation-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata Role Rotation
 details: ''
-artist: content/artists/tudor-sirbu.mdx
+artist: 
 date: 2024-12-01T12:00:00.000Z
 location: derby
 level: intermediate
