--- a/content/classes/2024/Bachata.mdx
+++ b/content/classes/2024/Bachata.mdx
@@ -2,7 +2,7 @@
 title: Bachata
 details: |
   Progressive class
-artist: content/artists/newcastle-salsa-congress.mdx
+artist: 
 date: 2024-11-29T20:00:00.000Z
 location: derby
 level: all
