--- a/content/classes/2024/Casino-de-Rueda-Structures.mdx
+++ b/content/classes/2024/Casino-de-Rueda-Structures.mdx
@@ -1,7 +1,7 @@
 ---
 title: Casino de Rueda Structures
 details: ''
-artist: content/artists/high-five-salsa.mdx
+artist: 
 date: 2024-11-30T15:00:00.000Z
 location: ballroom
 level: intermediate
