--- a/content/classes/2024/Crossbody-Salsa-Jeray.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Jeray.mdx
@@ -2,7 +2,7 @@
 title: Crossbody Salsa
 details: |
   & Fernanda
-artist: content/artists/jeray-montero.mdx
+artist: 
 date: 2024-12-01T11:00:00.000Z
 location: sefton
 level: improver
