--- a/content/classes/2024/Crossbody-Salsa-Partnerwork.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Partnerwork.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crossbody Salsa Partnerwork
 details: ''
-artist: content/artists/carl-and-ellena.mdx
+artist: 
 date: 2024-11-30T11:00:00.000Z
 location: sefton
 level: intermediate
