--- a/content/classes/2024/Crossbody-Salsa-Sam-Natalie.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Sam-Natalie.mdx
@@ -1,6 +1,6 @@
 ---
 title: Crossbody Salsa
-artist: content/artists/newcastle-salsa-congress.mdx
+artist: 
 date: 2024-12-01T15:00:00.000Z
 location: sefton
 level: intermediate
