--- a/content/classes/2024/Cuban-Salsa.mdx
+++ b/content/classes/2024/Cuban-Salsa.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cuban Salsa
 details: ''
-artist: content/artists/alex-penrose.mdx
+artist: 
 date: 2024-12-01T11:00:00.000Z
 location: ballroom
 level: intermediate
