--- a/content/classes/2024/Cuban-Son.mdx
+++ b/content/classes/2024/Cuban-Son.mdx
@@ -1,6 +1,6 @@
 ---
 title: Cuban Son
-artist: content/artists/latin-mania.mdx
+artist: 
 date: 2024-12-01T13:00:00.000Z
 location: ballroom
 level: all
