--- a/content/classes/2024/Cubatone.mdx
+++ b/content/classes/2024/Cubatone.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cubatone
 details: ''
-artist: content/artists/sarah-leigh.mdx
+artist: 
 date: 2024-11-30T10:00:00.000Z
 location: terrace
 level: all
