--- a/content/classes/2024/Dominican-Bachata-partnerwork.mdx
+++ b/content/classes/2024/Dominican-Bachata-partnerwork.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dominican Bachata Partnerwork
 details: ''
-artist: content/artists/Julian-M.mdx
+artist: 
 date: 2024-11-30T15:00:00.000Z
 location: derby
 level: advanced
