--- a/content/classes/2024/Dominican-Bachata.mdx
+++ b/content/classes/2024/Dominican-Bachata.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dominican Bachata
 details: ''
-artist: content/artists/sweet-salsa.mdx
+artist: 
 date: 2024-11-30T13:00:00.000Z
 location: hypostyle
 level: beginner
