--- a/content/classes/2024/Kizomba-Fusion-Alfie.mdx
+++ b/content/classes/2024/Kizomba-Fusion-Alfie.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kizomba Fusion
 details: ''
-artist: content/artists/alfie-alleyne.mdx
+artist: 
 date: 2024-12-01T11:00:00.000Z
 location: hypostyle
 level: improver
