--- a/content/classes/2024/Practical-application-of-musicality-in-cuban-salsa-partner-work.mdx
+++ b/content/classes/2024/Practical-application-of-musicality-in-cuban-salsa-partner-work.mdx
@@ -1,7 +1,7 @@
 ---
 title: Practical application of musicality in cuban salsa partner work
 details: ''
-artist: content/artists/Moe-Flex.mdx
+artist: 
 date: 2024-11-30T14:00:00.000Z
 location: ballroom
 level: advanced
