--- a/content/classes/2024/Rueda-Equis.mdx
+++ b/content/classes/2024/Rueda-Equis.mdx
@@ -2,7 +2,7 @@
 title: Rueda Equis
 details: |
   Participants need some knowledge of both roles
-artist: content/artists/high-five-salsa.mdx
+artist: 
 date: 2024-11-30T16:00:00.000Z
 location: ballroom
 level: intermediate
