--- a/content/classes/2024/Salsa-On2.mdx
+++ b/content/classes/2024/Salsa-On2.mdx
@@ -2,7 +2,7 @@
 title: Salsa On2
 details: |
   Lead & Follow
-artist: content/artists/Moe-Flex.mdx
+artist: 
 date: 2024-12-01T16:00:00.000Z
 location: derby
 level: advanced
