--- a/content/classes/2024/Salsa-Rueda-2.mdx
+++ b/content/classes/2024/Salsa-Rueda-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: Salsa Rueda
-artist: content/artists/alex-penrose.mdx
+artist: 
 date: 2024-12-01T13:00:00.000Z
 location: hypostyle
 level: improver
