--- a/content/classes/2024/SonSalsa-Musicality-with-Live-Perscussion.mdx
+++ b/content/classes/2024/SonSalsa-Musicality-with-Live-Perscussion.mdx
@@ -1,7 +1,7 @@
 ---
 title: Son/Salsa Musicality with Live Perscussion
 details: ''
-artist: content/artists/latin-mania.mdx
+artist: 
 date: 2024-11-30T11:00:00.000Z
 location: ballroom
 level: improver
