--- a/content/classes/2024/Yoga-for-Dancers.mdx
+++ b/content/classes/2024/Yoga-for-Dancers.mdx
@@ -1,7 +1,7 @@
 ---
 title: Yoga for Dancers
 details: ''
-artist: content/artists/robyn-claire.mdx
+artist: 
 date: 2024-11-30T13:00:00.000Z
 location: derby
 level: all
