--- a/content/classes/2024/Afro-Cuban.mdx
+++ b/content/classes/2024/Afro-Cuban.mdx
@@ -1,7 +1,7 @@
 ---
 title: Afro Cuban
 details: ''
-artist: content/artists/javier.mdx
+artist: 
 date: 2024-11-30T12:00:00.000Z
 location: ballroom
 level: intermediate
