--- a/content/classes/2024/Afrobeats.mdx
+++ b/content/classes/2024/Afrobeats.mdx
@@ -1,7 +1,7 @@
 ---
 title: Afrobeats
 details: ''
-artist: content/artists/jeydikson.mdx
+artist: 
 date: 2024-12-01T15:00:00.000Z
 location: hypostyle
 level: all
