--- a/content/classes/2024/Bachata-Basics-2.mdx
+++ b/content/classes/2024/Bachata-Basics-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata Basics 2
 details: ''
-artist: content/artists/richard-and-angela.mdx
+artist: 
 date: 2024-12-01T11:00:00.000Z
 location: derby
 level: beginner
