--- a/content/classes/2024/Bachata-Fadi.mdx
+++ b/content/classes/2024/Bachata-Fadi.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata
 details: ''
-artist: content/artists/Fadi-K.mdx
+artist: 
 date: 2024-11-30T21:00:00.000Z
 location: derby
 level: intermediate
