--- a/content/classes/2024/Bachata-Moderna-Esref.mdx
+++ b/content/classes/2024/Bachata-Moderna-Esref.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata Moderna
 details: ''
-artist: content/artists/esref.mdx
+artist: 
 date: 2024-12-01T13:00:00.000Z
 location: derby
 level: advanced
