--- a/content/classes/2024/Bachata-Role-Rotation.mdx
+++ b/content/classes/2024/Bachata-Role-Rotation.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata Role Rotation
 details: ''
-artist: content/artists/chandi-and-eniko.mdx
+artist: 
 date: 2024-11-30T14:00:00.000Z
 location: derby
 level: intermediate
