--- a/content/classes/2024/Bachata-Sat-Night.mdx
+++ b/content/classes/2024/Bachata-Sat-Night.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bachata
 details: ''
-artist: content/artists/Julian-M.mdx
+artist: 
 date: 2024-12-01T20:00:00.000Z
 location: derby
 level: improver
