--- a/content/classes/2024/Bachata-Styling.mdx
+++ b/content/classes/2024/Bachata-Styling.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bachata Styling
-artist: content/artists/fernanda-navi.mdx
+artist: 
 date: 2024-12-01T15:00:00.000Z
 location: derby
 level: improver
