--- a/content/classes/2024/Bollywood-Fusion.mdx
+++ b/content/classes/2024/Bollywood-Fusion.mdx
@@ -2,7 +2,7 @@
 title: Bollywood Fusion
 details: |
   This class is with Chandni on her own
-artist: content/artists/chandi-and-eniko.mdx
+artist: 
 date: 2024-11-30T12:00:00.000Z
 location: hypostyle
 level: all
