--- a/content/classes/2024/Cali-Salsa.mdx
+++ b/content/classes/2024/Cali-Salsa.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cali Salsa
 details: ''
-artist: content/artists/sami-rodriguez.mdx
+artist: 
 date: 2024-11-30T14:00:00.000Z
 location: sefton
 level: improver
