--- a/content/classes/2024/Cha-Cha-Ballroom.mdx
+++ b/content/classes/2024/Cha-Cha-Ballroom.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cha Cha Ballroom
 details: ''
-artist: content/artists/kayleigh-and-korey.mdx
+artist: 
 date: 2024-11-30T12:00:00.000Z
 location: sefton
 level: beginner
