--- a/content/classes/2024/Contratiempo-Rueda.mdx
+++ b/content/classes/2024/Contratiempo-Rueda.mdx
@@ -1,7 +1,7 @@
 ---
 title: Contratiempo Rueda
 details: ''
-artist: content/artists/esref.mdx
+artist: 
 date: 2024-11-30T13:00:00.000Z
 location: ballroom
 level: intermediate
