--- a/content/classes/2024/Crossbody-Salsa-Carl-and-Ellena-2.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Carl-and-Ellena-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crossbody Salsa
 details: ''
-artist: content/artists/carl-and-ellena.mdx
+artist: 
 date: 2024-12-01T17:00:00.000Z
 location: sefton
 level: advanced
