--- a/content/classes/2024/Crossbody-Salsa-Fred.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Fred.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crossbody Salsa
 details: ''
-artist: content/artists/freddie-garland.mdx
+artist: 
 date: 2024-11-30T21:00:00.000Z
 location: sefton
 level: advanced
