--- a/content/classes/2024/Crossbody-Salsa-Sat-Night.mdx
+++ b/content/classes/2024/Crossbody-Salsa-Sat-Night.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crossbody Salsa
 details: ''
-artist: content/artists/mauricio-reyes.mdx
+artist: 
 date: 2024-12-01T20:00:00.000Z
 location: sefton
 level: intermediate
