--- a/content/classes/2024/Crossbody-Salsa.mdx
+++ b/content/classes/2024/Crossbody-Salsa.mdx
@@ -1,7 +1,7 @@
 ---
 title: Crossbody Salsa
 details: ''
-artist: content/artists/Fadi-K.mdx
+artist: 
 date: 2024-11-30T13:00:00.000Z
 location: sefton
 level: advanced
