--- a/content/classes/2024/Cuban-Rumba--Salsa.mdx
+++ b/content/classes/2024/Cuban-Rumba--Salsa.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cuban Rumba + Salsa
 details: ''
-artist: content/artists/la-suerte-mc.mdx
+artist: 
 date: 2024-12-01T14:00:00.000Z
 location: ballroom
 level: improver
