--- a/content/classes/2024/Cuban-Salsa-Partnerwork.mdx
+++ b/content/classes/2024/Cuban-Salsa-Partnerwork.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cuban Salsa Partnerwork
 details: ''
-artist: content/artists/sweet-salsa.mdx
+artist: 
 date: 2024-11-30T10:00:00.000Z
 location: ballroom
 level: improver
