--- a/content/classes/2024/Dominican-Bachata-Footwork-2.mdx
+++ b/content/classes/2024/Dominican-Bachata-Footwork-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dominican Bachata Footwork
 details: ''
-artist: content/artists/Julian-M.mdx
+artist: 
 date: 2024-12-01T14:00:00.000Z
 location: derby
 level: intermediate
