--- a/content/classes/2024/Dominican-Bachata-Footwork.mdx
+++ b/content/classes/2024/Dominican-Bachata-Footwork.mdx
@@ -1,7 +1,7 @@
 ---
 title: Dominican Bachata Footwork
 details: ''
-artist: content/artists/jeray-montero.mdx
+artist: 
 date: 2024-11-30T16:00:00.000Z
 location: derby
 level: improver
