--- a/content/classes/2024/Hip-Hop-Moves-for-Salsa.mdx
+++ b/content/classes/2024/Hip-Hop-Moves-for-Salsa.mdx
@@ -1,7 +1,7 @@
 ---
 title: Hip Hop Moves for Salsa
 details: ''
-artist: content/artists/laura-marvel.mdx
+artist: 
 date: 2024-11-30T14:00:00.000Z
 location: hypostyle
 level: all
