--- a/content/classes/2024/Kizomba-Basics.mdx
+++ b/content/classes/2024/Kizomba-Basics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kizomba Basics
 details: ''
-artist: content/artists/alfie-alleyne.mdx
+artist: 
 date: 2024-11-30T10:00:00.000Z
 location: hypostyle
 level: beginner
