--- a/content/classes/2024/Kizomba-Fusion.mdx
+++ b/content/classes/2024/Kizomba-Fusion.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kizomba Fusion
 details: ''
-artist: content/artists/jeydikson.mdx
+artist: 
 date: 2024-11-29T20:00:00.000Z
 location: hypostyle
 level: intermediate
