--- a/content/classes/2024/Kizomba-Na-Pasada.mdx
+++ b/content/classes/2024/Kizomba-Na-Pasada.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kizomba Na Pasada
 details: ''
-artist: content/artists/jeydikson.mdx
+artist: 
 date: 2024-11-30T11:00:00.000Z
 location: hypostyle
 level: advanced
