--- a/content/classes/2024/Kizomba-with-Tarraxinha.mdx
+++ b/content/classes/2024/Kizomba-with-Tarraxinha.mdx
@@ -1,6 +1,6 @@
 ---
 title: Kizomba with Tarraxinha
-artist: content/artists/eudora---dj-lady-e.mdx
+artist: 
 date: 2024-12-01T16:00:00.000Z
 location: hypostyle
 level: improver
