--- a/content/classes/2024/Latin-Line-ups.mdx
+++ b/content/classes/2024/Latin-Line-ups.mdx
@@ -1,7 +1,7 @@
 ---
 title: Latin Line-ups
 details: ''
-artist: content/artists/sarah-leigh.mdx
+artist: 
 date: 2024-12-01T11:00:00.000Z
 location: terrace
 level: all
