--- a/content/classes/2024/Merengue.mdx
+++ b/content/classes/2024/Merengue.mdx
@@ -1,7 +1,7 @@
 ---
 title: Merengue
 details: ''
-artist: content/artists/esref.mdx
+artist: 
 date: 2024-11-30T16:00:00.000Z
 location: terrace
 level: all
