--- a/content/classes/2024/Reggaeton.mdx
+++ b/content/classes/2024/Reggaeton.mdx
@@ -1,7 +1,7 @@
 ---
 title: Reggaeton
 details: ''
-artist: content/artists/sugagill-.mdx
+artist: 
 date: 2024-12-01T17:00:00.000Z
 location: ballroom
 level: intermediate
