--- a/content/classes/2024/Rueda-Casino.mdx
+++ b/content/classes/2024/Rueda-Casino.mdx
@@ -1,6 +1,6 @@
 ---
 title: Rueda Casino
-artist: content/artists/Moe-Flex.mdx
+artist: 
 date: 2024-11-30T21:00:00.000Z
 location: ballroom
 level: improver
