--- a/content/classes/2024/Rueda-Dinamica.mdx
+++ b/content/classes/2024/Rueda-Dinamica.mdx
@@ -1,6 +1,6 @@
 ---
 title: Rueda Dinamica
-artist: content/artists/high-five-salsa.mdx
+artist: 
 date: 2024-12-01T12:00:00.000Z
 location: ballroom
 level: advanced
