--- a/content/classes/2024/Salsa-AfroCuban.mdx
+++ b/content/classes/2024/Salsa-AfroCuban.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa & AfroCuban
 details: ''
-artist: content/artists/la-suerte-mc.mdx
+artist: 
 date: 2024-12-01T16:00:00.000Z
 location: ballroom
 level: intermediate
