--- a/content/classes/2024/Salsa-Casino.mdx
+++ b/content/classes/2024/Salsa-Casino.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Casino
 details: ''
-artist: content/artists/Moe-Flex.mdx
+artist: 
 date: 2024-12-01T20:00:00.000Z
 location: ballroom
 level: intermediate
