--- a/content/classes/2024/Salsa-Crossbody-Connection.mdx
+++ b/content/classes/2024/Salsa-Crossbody-Connection.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Crossbody Connection
 details: ''
-artist: content/artists/freddie-garland.mdx
+artist: 
 date: 2024-11-30T16:00:00.000Z
 location: sefton
 level: intermediate
