--- a/content/classes/2024/Salsa-Footwork.mdx
+++ b/content/classes/2024/Salsa-Footwork.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Footwork
 details: ''
-artist: content/artists/libby.mdx
+artist: 
 date: 2024-11-30T10:00:00.000Z
 location: sefton
 level: advanced
