--- a/content/classes/2024/Salsa-Fusion-2.mdx
+++ b/content/classes/2024/Salsa-Fusion-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Fusion
 details: ''
-artist: content/artists/andreas-rebel-salsa.mdx
+artist: 
 date: 2024-12-01T13:00:00.000Z
 location: sefton
 level: intermediate
