--- a/content/classes/2024/Salsa-Fusion.mdx
+++ b/content/classes/2024/Salsa-Fusion.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Fusion
 details: ''
-artist: content/artists/andreas-rebel-salsa.mdx
+artist: 
 date: 2024-11-29T20:00:00.000Z
 location: ballroom
 level: improver
