--- a/content/classes/2024/Salsa-Threesomes.mdx
+++ b/content/classes/2024/Salsa-Threesomes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Salsa Threesomes
 details: ''
-artist: content/artists/gill-alleyne.mdx
+artist: 
 date: 2024-11-30T15:00:00.000Z
 location: hypostyle
 level: all
