--- a/content/classes/2024/Samba-No-Pe.mdx
+++ b/content/classes/2024/Samba-No-Pe.mdx
@@ -1,7 +1,7 @@
 ---
 title: Samba No Pe
 details: ''
-artist: content/artists/sugagill-.mdx
+artist: 
 date: 2024-12-01T14:00:00.000Z
 location: sefton
 level: advanced
