--- a/content/classes/2024/Semba-1.mdx
+++ b/content/classes/2024/Semba-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: Semba 1
-artist: content/artists/abigail-wylie.mdx
+artist: 
 date: 2024-12-01T14:00:00.000Z
 location: hypostyle
 level: beginner
