--- a/content/classes/2024/Semba-2.mdx
+++ b/content/classes/2024/Semba-2.mdx
@@ -1,7 +1,7 @@
 ---
 title: Semba 2
 details: ''
-artist: content/artists/abigail-wylie.mdx
+artist: 
 date: 2024-12-01T17:00:00.000Z
 location: hypostyle
 level: improver
