--- a/content/classes/2024/Sensual-Bachata.mdx
+++ b/content/classes/2024/Sensual-Bachata.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sensual Bachata
 details: ''
-artist: content/artists/shahid-bachatero.mdx
+artist: 
 date: 2024-11-30T11:00:00.000Z
 location: derby
 level: improver
