--- a/content/classes/2024/Styling--Spin-Technique.mdx
+++ b/content/classes/2024/Styling--Spin-Technique.mdx
@@ -1,7 +1,7 @@
 ---
 title: Styling & Spin Technique
 details: ''
-artist: content/artists/freddie-garland.mdx
+artist: 
 date: 2024-12-01T12:00:00.000Z
 location: hypostyle
 level: improver
