--- a/content/classes/2024/Swing-Jive.mdx
+++ b/content/classes/2024/Swing-Jive.mdx
@@ -1,7 +1,7 @@
 ---
 title: Swing Jive
 details: ''
-artist: content/artists/kayleigh-and-korey.mdx
+artist: 
 date: 2024-12-01T16:00:00.000Z
 location: sefton
 level: beginner
