--- a/content/classes/2024/UrbanKiz.mdx
+++ b/content/classes/2024/UrbanKiz.mdx
@@ -1,7 +1,7 @@
 ---
 title: UrbanKiz
 details: ''
-artist: content/artists/amine-urbankiz-and-ama-cee.mdx
+artist: 
 date: 2024-11-30T16:00:00.000Z
 location: hypostyle
 level: advanced
