🎨 Updates hero component image handling
Modifies the hero component to handle SVG images with adjusted padding and object fit settings.
Replaces the hero image source in the home page and adds necessary image files.

--- a/content/pages/home.mdx
+++ b/content/pages/home.mdx
@@ -18,7 +18,7 @@ blocks:
         icon: true
         link: /tickets
     image:
-      src: /uploads/mlf-colour-full-2.svg
+      src: /uploads/MLF Yearless.svg
       alt: MLF Logo
     backgroundimage: /uploads/background1.jpg
     color: primary
